package com.tonotes.core

class Constants {
    object NavArgument {
        const val NOTE_ID = "noteId"
    }

    object TestTag {
        const val TITLE_TEXT_FIELD = "title-textfield"
        const val DESCRIPTION_TEXT_FIELD = "description-textfield"
        const val TITLE_TEXT = "title-text"
        const val DESCRIPTION_TEXT = "description-text"
    }
}